--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,8 @@
 .nav-bar {
   box-shadow: 0px 5px 0px 0px red;
   display: flex;
+  padding: 5px 5px 5px 5px;
+  font-size: 14px;
 }
 
 /* Trying to Style so that this stays on the top left part of the Nav Bar */
@@ -31,12 +33,13 @@
   display: inline-block;
   text-align: left;
   width: 100%;
-  padding-top: 5px;
+  padding-top: 8px;
 }
 
 /* Added Style class Top Nav Bar to cover the fonts of the Nav Bar */
 .top-nav-bar {
-  font-size: 16px;
+  font-size: 14px;
+  padding: 5px 5px 5px 5px;
 }
 
 /* Trying to Style os that this stays on the top right part of the Nav Bar */
